# manager

./: .env.db  .env.mongo  .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  ssh_agent.sh
app/: db.py
app/controllers/: help.py  subscribe.py
app/models/: drone.py
app/routers/: capture.py  subscribe.py
app/utils/: responses.py  state.py  tools.py
